--- a/src/app/view-request/member-item/member-item.component.html
+++ b/src/app/view-request/member-item/member-item.component.html
@@ -1,4 +1,4 @@
 <div class="member-list">
-  <div class="profile"></div>
-  <strong>Elliah Hachel A. Tolentino</strong>
+  <img src="{{ member.photoUrl }}" class="profile">
+  <strong>{{ member.name }}</strong>
 </div>
