--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,20 @@
 <div class="dashboard">
-  <header class="mb-2">
-    <h4>Dashboard</h4>
-  </header>
   <main>
-    <app-dashboard-item></app-dashboard-item>
+    <div class="dashboard-header heavy">
+      <p>Sender</p>
+      <p class="message text-start">Message</p>
+      <p class="text-end">Date</p>
+    </div>
+    <app-dashboard-item *ngFor="let request of requestItems" [request]="request"></app-dashboard-item>
+    <div class="spinner-border text-primary" style="display: flex; margin: auto;" role="status" *ngIf="loading">
+      <span class="sr-only"></span>
+    </div>
+    <div class="states__empty" *ngIf="empty && requestItems.length === 0">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M18 13V5a2 2 0 00-2-2H4a2 2 0 00-2 2v8a2 2 0 002 2h3l3 3 3-3h3a2 2 0 002-2zM5 7a1 1 0 011-1h8a1 1 0 110 2H6a1 1 0 01-1-1zm1 3a1 1 0 100 2h3a1 1 0 100-2H6z" clip-rule="evenodd" />
+      </svg>
+      <strong>Nothing to evaluate</strong>
+      <p>Students request for evaluation will be shown here.</p>
+    </div>
   </main>
 </div>
