--- a/src/app/view-request/view-request.component.html
+++ b/src/app/view-request/view-request.component.html
@@ -2,47 +2,50 @@
 </div>
 
 <div class="preview">
-  <section class="meta">
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <div class="spinner-border text-primary" role="status" *ngIf="loading">
+      <span class="sr-only"></span>
+    </div>
+  </div>
+  <section class="meta" *ngIf="!loading">
     <div class="NgxEditor__Wrapper">
-      <!-- <ngx-editor-menu [editor]="editor"> </ngx-editor-menu> -->
-      <ngx-editor
-        [editor]="editor"
-        [ngModel]="html"
-        [disabled]="false"
-        [placeholder]="'Type here...'"
-      ></ngx-editor>
+      <ngx-editor [editor]="editor" [(ngModel)]="html" [disabled]="true"
+      [placeholder]="'Type here'"></ngx-editor>
     </div>
   </section>
-  <section class="information">
+  <section class="information" *ngIf="!loading" style="overflow-y: auto;">
     <svg (click)="closePreview()" class="close-btn m-3" style="position: fixed; right: 0;" xmlns="http://www.w3.org/2000/svg" className="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
       <path fillRule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clipRule="evenodd" />
     </svg>
     <div class="sender divider">
       <strong>Sender</strong>
       <div class="member-list">
-        <div class="profile"></div>
-        <strong>Allain John T. Notarte</strong>
+        <img class="profile" src="{{ senderData.photoUrl }}">
+        <strong>{{ senderData.name }}</strong>
       </div>
     </div>
     <div class="uploaded divider">
       <strong>Type</strong><br>
-      Developmental
+      {{ document.type }}
     </div>
     <div class="divider">
       <strong class="mb-2">Member(s)</strong>
-      <app-member-item></app-member-item>
+      <app-member-item *ngFor="let member of membersData" [member]="member"></app-member-item>
     </div>
-    <div class="divider comments">
-      <svg xmlns="http://www.w3.org/2000/svg" className="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-        <path fillRule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clipRule="evenodd" />
-      </svg><strong>Comment(s)</strong>
+    <div class="divider comments d-flex flex-column">
+
+      <div class="form-floating">
+        <textarea class="form-control" [(ngModel)]="document.comments" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+        <label for="floatingTextarea">Comment</label>
+      </div>
     </div>
     <div class="footer">
-      <select class="btn btn__common_secondary" aria-label=".form-select-lg example">
-        <option value="1" selected>Ongoing</option>
-        <option value="2">Validated</option>
+      <select [(ngModel)]="document.status" name="status" #status="ngModel" class="btn btn__common_secondary" aria-label=".form-select-lg example">
+        <option value="Ongoing" selected>Ongoing</option>
+        <option value="Returned">Revise</option>
+        <option value="Validated">Validated</option>
       </select>
-      <button class="btn btn__common">Return</button>
+      <button class="btn btn__common" (click)="return()" [disabled]="document.status === 'Submitted'">Return</button>
     </div>
   </section>
 </div>
