--- a/src/assets/scss/abstract/_page.scss
+++ b/src/assets/scss/abstract/_page.scss
@@ -4,12 +4,12 @@
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   overflow: hidden;
-  background-color: $bg-color;
   font-size: 0.922rem;
 }
 
 .page {
   height: 100vh;
+  background-color: white;
   
   &__inner {
     height: 100vh;
