--- a/src/assets/scss/abstract/_typography.scss
+++ b/src/assets/scss/abstract/_typography.scss
@@ -1,5 +1,5 @@
 .large-heavy {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 
@@ -9,4 +9,8 @@
   &__heavy {
     font-weight: 600;
   }
+}
+
+.heavy {
+  font-weight: 600;
 }
